# engple.github.io

./: .cursorignore  .eslintrc.js  .gitignore  .lintstagedrc  README.md  gatsby-config.js  gatsby-meta-config.js  gatsby-node.js  gatsby-ssr.js  package.json
scripts/: expressions.json  expressions_list.txt  generate_variations.py  link_expressions.py  main.py  pyproject.toml
scripts/data/: blog_example-delay.md  blogmeta_example.json  example_sentences.json  recommendiation_examples.json
scripts/engple/: config.py  constants.py  models.py
scripts/engple/clients/: __init__.py
scripts/engple/core/: __init__.py  batch_linker.py  blog_writer.py  candidate_meanings.py  context_detector.py  expression_candidates.py  expression_discovery.py  expression_linker.py  expression_targets.py  file_processor.py  image_searcher.py  topic_blog_writer.py  topic_vocab.py  variation_generator.py
scripts/engple/models/: __init__.py  expression.py
scripts/engple/prompts/: blog.toml  topic.toml
scripts/engple/services/: link_all_expressions.py  link_expression.py  link_topic_blogs.py  sanitize_posts.py  write_blog.py  write_topic_blog.py
scripts/engple/utils/: __init__.py  backup.py  context_detector.py  context_utils.py  expr_path.py  file.py  image.py  null_bytes.py  spacy.py  variation_generator.py
scripts/tests/: conftest.py  test_core.py  test_e2e.py  test_expression_candidates.py  test_link_expression_e2e.py  test_null_bytes.py  test_utils.py  test_write_blog.py  test_write_topic_blog.py
scripts/tests/fixtures/: comprehensive.md  edge_cases.md  html_contexts.md
(+1888 files in other folders)
