[project]
name = "engple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "lemminflect>=0.2.3,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "notion-client>=2.5.0",
    "pillow>=10.0.0",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[google,logfire,openai]>=0.8.1",
    "pydantic-settings>=2.10.1",
    "quickthumb>=0.1.0",
    "requests>=2.31.0",
    "spacy>=3.8.7,<4.0.0",
    "typer>=0.16.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pydantic-evals>=0.0.7",
]
